public/css/lifer-webflow.css
/* ... */
.fs-styleguide_spacing-all {
  display: none;
}

.answer_blur-wrapper {
  z-index: -1;
  opacity: .3;
  position: absolute;
  inset: 0%;
}

.form_component {
  margin-bottom: 0;
}

.svg {
  width: 100%;
  height: 100%;
}

.spacer-xxlarge {
  width: 100%;
  padding-top: 5rem;
}

.about_grid {
  z-index: 2;
  grid-column-gap: 1.5rem;
  grid-template-rows: auto;
  grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
  grid-auto-columns: 1fr;
  display: grid;
  position: relative;
}

.answer_logo-wrapper {
  perspective: 1000px;
  width: 21.375rem;
  height: 21.375rem;
  padding: 1.125rem;
  position: absolute;
  inset: auto auto 9.625rem 50%;
  transform: translate(-50%);
}

.gradient-blur {
  z-index: 2;
  -webkit-backdrop-filter: none;
  backdrop-filter: none;
  width: 100%;
  height: calc(100% + 5rem);
  display: none;
  position: absolute;
  inset: 0%;
}

.text-align-left {
  text-align: left;
}

.button-label-inner {
  position: relative;
  overflow: hidden;
}

.padding-section-large {
  padding-top: 4.68rem;
  padding-bottom: 4.68rem;
}

.container-medium {
  width: 100%;
  max-width: 71.25rem;
  margin-left: auto;
  margin-right: auto;
}

.spacer-huge {
  width: 100%;
  padding-top: 6rem;
}

.text-style-strikethrough {
  text-decoration: line-through;
}

.control_icon {
  z-index: 2;
  background-color: #fff;
  border-radius: 1rem;
  justify-content: center;
  align-items: center;
  width: 3.5rem;
  height: 3.5rem;
  display: flex;
  box-shadow: 0 .125rem .25rem #00000012;
}

.background-color-tertiary {
  background-color: #fff9f2;
}

.nav_cta-button {
  z-index: 0;
  grid-column-gap: 2rem;
  display: flex;
  position: relative;
}

.margin-xxlarge {
  margin: 5rem;
}

.trusted_logo-mask-white {
  background-color: #fff;
  width: 10%;
  height: 100%;
}

.background-color-secondary {
  background-color: #7a8599;
}

.nav_bg-scroll {
  z-index: -1;
  opacity: 0;
  pointer-events: none;
  background-image: linear-gradient(#ffffffb3, #fff0 85%);
  width: 100%;
  height: 100%;
  transition: none;
  position: absolute;
  inset: 0%;
}

.margin-small {
  margin: 1rem;
}

.text-align-center {
  text-align: center;
}

.time_text-block {
  flex-flow: column;
  justify-content: space-between;
  align-items: flex-start;
  min-height: 100%;
  padding-top: .625rem;
  display: flex;
}

.trusted_logo-mask {
  display: flex;
  position: absolute;
  inset: 0%;
}

.results_eddge-icon {
  flex: none;
  width: 1.75rem;
  height: 1.75rem;
}

.results_eddge-center {
  z-index: 2;
  margin-left: auto;
  margin-right: auto;
  position: relative;
}

.reveiw_card-icon-root {
  z-index: 0;
  pointer-events: none;
  width: 28.5rem;
  height: 100%;
  position: relative;
  overflow: visible;
}

.nav_menu-toggle {
  justify-content: flex-end;
  align-items: stretch;
  width: 100%;
  padding: .43rem;
  display: flex;
  position: relative;
}

.splide__list {
  width: 100%;
  height: 100%;
  display: flex;
}

.hide {
  display: none;
}

.footer_wrapper {
  height: 35.75rem;
  margin-top: -35.75rem;
}

.container-large {
  width: 100%;
  max-width: 86rem;
  margin-left: auto;
  margin-right: auto;
}

.container-large.container-full {
  max-width: none;
}

.hero_star {
  z-index: 2;
  width: 18.75rem;
  height: 12.625rem;
  position: absolute;
  inset: 1.625rem auto auto 0%;
}

.overflow-scroll {
  overflow: scroll;
}

.margin-tiny {
  margin: .125rem;
}

.padding-xhuge {
  padding: 8rem;
}

.btn-navbar-border {
  z-index: 3;
  border-radius: 1rem;
  flex: none;
  justify-content: center;
  align-items: center;
  width: 10.625rem;
  height: 3.125rem;
  transition: all .45s ease-in-out;
  display: flex;
  position: relative;
}

.trusted-heading {
  color: #7a8599;
  font-weight: 300;
}

.footer_top {
  grid-row-gap: 2.5rem;
  text-align: center;
  flex-flow: column;
  align-items: center;
  display: flex;
}

.nav_logo {
  width: 100%;
  height: 100%;
}

.draft-style {
  opacity: 0;
  pointer-events: none;
  position: fixed;
  inset: 0%;
}

.max-width-small {
  width: 100%;
  max-width: 20rem;
}

.icon-height-small {
  height: 1rem;
}

.heading-style-h5 {
  letter-spacing: -.0625rem;
  font-size: 1.5rem;
  font-weight: 600;
  line-height: .9;
}

.control_description {
  padding-left: 2.5rem;
  padding-right: 2.5rem;
}

.padding-xxhuge {
  padding: 12rem;
}

.splide-pagination {
  justify-content: space-between;
  align-items: stretch;
  display: flex;
}

.control_card-text-date {
  margin-top: 1.62rem;
  margin-bottom: .875rem;
}

.padding-large {
  padding: 3rem;
}

.aspect-ratio-portrait {
  aspect-ratio: 2 / 3;
  object-fit: cover;
}

.btn-navbar-nover-gradient {
  z-index: -2;
  opacity: 0;
  width: 100%;
  height: 100%;
  transition: opacity .35s ease-in-out;
  position: absolute;
  inset: 0%;
  box-shadow: inset 0 1.5px 3.5px #fffdff;
}

.button-group {
  grid-column-gap: 1rem;
  grid-row-gap: 1rem;
  flex-flow: wrap;
  justify-content: flex-start;
  align-items: center;
  display: flex;
}

.z-index-1 {
  z-index: 1;
  position: relative;
}

.text-align-right {
  text-align: right;
}

.time_card-value {
  grid-column-gap: .75rem;
  align-items: flex-start;
  display: flex;
}

.padding-section-small {
  padding-top: 3rem;
  padding-bottom: 3rem;
}

.time_cards-absolute {
  pointer-events: none;
  justify-content: flex-end;
  align-items: stretch;
  padding-top: 3.12rem;
  padding-bottom: 3.25rem;
  padding-right: 3.75rem;
  display: flex;
  position: absolute;
  inset: 0%;
}

.aspect-ratio-landscape {
  aspect-ratio: 3 / 2;
  object-fit: cover;
}

.button_flex {
  z-index: 1;
  grid-column-gap: 1rem;
  justify-content: flex-start;
  align-items: center;
  display: flex;
  position: relative;
}

.text-weight-normal {
  font-weight: 400;
}
/* ... */

